<resources>
    <string name="title">Ascend</string>
    <string name="subtitle">Spiritual</string>

    <string name="phone_number">Phone Number</string>
    <string name="code">Code</string>

    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirm</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_password">New Password</string>
    <string name="first_time_login">First Time Login</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="social_title">Don\'t have an account? <b>Sign Up</b></string>
    <string name="or">- or -</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="agreement">I agree with <b>Terms and Conditions</b> &amp; <b>Privacy Policy</b></string>
    <string name="terms_link">Terms and Conditions</string>
    <string name="privacy_link">Privacy Policy</string>
    <string name="already_member">Already a member? <b>Sing In</b></string>

    <string name="sign_up_continue">Continue</string>

    <string name="phone_format">+%s</string>

    <string name="verify_phone_header">Verify Phone Number</string>
    <string name="verify_phone_title">Enter 4 digits from SMS</string>
    <string name="verify">Verify</string>
    <string name="no_code">Haven\'t received the code yet?</string>
    <string name="resend">Resend Code</string>

    <string name="reset_password">Reset Password</string>

    <!--Errors messages-->
    <string name="error_login">Wrong phone number or password.</string>
    <string name="error_full_name">Please, enter your Full Name correctly</string>
    <string name="error_email">The email is incorrect. Please, make sure you entered correct data</string>
    <string name="error_phone">The number is invalid. Please check it once again</string>
    <string name="error_password">The password should contain at least 1 number, 1 latin letter, from 6 till 48 symbols.</string>
    <string name="error_password_confirm">Passwords don\’t match</string>

    <!--New Password-->
    <string name="enter_code_from_sms">Enter Code from SMS</string>
    <string name="haven_code_sms">Haven\'t received the code yet?</string>
    <string name="resend_code">Resend Code</string>
    <string name="save_new_password">Save New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="allow_code_digits">01234567890</string>

    <!--First Time Login-->
    <string name="first_time_login_title">Before signing in please complete the questionnaire</string>
    <string name="complete">Complete</string>
    <string name="add_your_answer">Add your answer</string>
    <string name="answer_error">Size from 2 till 48 symbols and spacebars, case sensitive, latin letters only.</string>

    <!--Dialog messages-->
    <string name="title_password_sent">Password Sent</string>
    <string name="content_password_sent">Please, check your SMS box and follow the instructions to complete the reset password.</string>

    <string name="server_client_id" translatable="false">782179262877-blgh224u0eldj7ck2e15t8cc7pc0u18j.apps.googleusercontent.com</string>
    <string name="server_client_secret" translatable="false">RNLVTGVFmqE-0O85WJVvHaYJ</string>
</resources>
