<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.text.InputType" />

        <variable
            name="model"
            type="com.doneit.ascend.presentation.login.log_in.LogInContract.ViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/red_hat_font"
                android:textStyle="bold"
                android:text="@string/title"
                android:textAllCaps="true"
                android:textColor="@color/default_font_color"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/red_hat_font"
                android:letterSpacing="0.1"
                android:text="@string/subtitle"
                android:textAllCaps="true"
                android:textColor="@color/green_font_color"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <include
                android:id="@+id/phoneLayout"
                layout="@layout/group_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="68dp"
                bind:text="@={model.loginModel.phone}"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:layout_constraintStart_toStartOf="parent"/>

            <include
                android:id="@+id/password"
                layout="@layout/group_icon_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                bind:icon="@{@drawable/ic_password}"
                bind:inputType="@{InputType.TYPE_TEXT_VARIATION_PASSWORD}"
                bind:hint="@{@string/password}"
                bind:text="@={model.loginModel.password}"
                bind:error="@{model.errorMessage}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/phoneLayout"
                app:layout_constraintTop_toBottomOf="@+id/phoneLayout"/>

            <Button
                android:id="@+id/signIn"
                style="@style/AppTheme.Button"
                android:layout_width="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:enabled="@{model.isSignInEnabled}"
                android:onClick="@{v -> model.singInClick()}"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <TextView
                android:id="@+id/forgotView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                style="@style/TextNormal"
                android:text="@string/forgot_password"
                android:textColor="@color/green_font_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signIn" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/socialLayout"
                android:layout_width="0dp"
                android:layout_height="227dp"
                android:layout_marginTop="36dp"
                android:background="@color/light_gray_f4f7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotView">


                <TextView
                    android:id="@+id/tvSocialTitle"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    style="@style/TextNormal"
                    android:text="@string/social_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:alpha="0.5"
                    style="@style/TextNormal"
                    android:text="@string/or"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSocialTitle" />

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_facebook"
                    app:layout_constraintEnd_toStartOf="@id/google"
                    app:layout_constraintHorizontal_chainStyle="spread"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvOr" />

                <ImageView
                    android:id="@+id/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_google"
                    app:layout_constraintBottom_toBottomOf="@id/facebook"
                    app:layout_constraintEnd_toStartOf="@id/twitter"
                    app:layout_constraintStart_toEndOf="@id/facebook"
                    app:layout_constraintTop_toTopOf="@id/facebook" />

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:src="@drawable/ic_twitter"
                    app:layout_constraintBottom_toBottomOf="@id/google"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/google"
                    app:layout_constraintTop_toTopOf="@id/google" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/termsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/default_font_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/socialLayout" />

            <TextView
                android:id="@+id/policyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/privacy"
                android:textColor="@color/default_font_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/termsView" />

            <View
                android:layout_width="134dp"
                android:layout_height="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/light_gray_f4f7"
                app:layout_constraintVertical_bias="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/policyView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
