<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <import type="android.text.InputType" />

        <variable
            name="model"
            type="com.doneit.ascend.presentation.login.new_password.NewPasswordContract.ViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layout_constraintTop_toTopOf="parent"
            bind:title="@{@string/new_password}" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="48dp"
                android:paddingEnd="16dp">

                <com.doneit.ascend.presentation.login.views.EditWithError
                    android:id="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:error="@{model.newPasswordModel.code.observableError}"
                    app:hint="@{@string/enter_code_from_sms}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:src="@{@drawable/ic_lock}"
                    app:text="@={model.newPasswordModel.code.observableField}" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvHaventReceivedCode"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_marginStart="33dp"
                    android:alpha="0.5"
                    android:gravity="top"
                    android:text="@string/haven_code_sms"
                    android:textAppearance="@style/haven_code_sms"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/code" />

                <TextView
                    android:id="@+id/resendCodeView"
                    style="@style/TextNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="33dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="50dp"
                    android:onClick="@{v -> model.resendCodeClick()}"
                    android:text="@string/resend_code"
                    android:textColor="@color/green_font_color"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvHaventReceivedCode" />

                <com.doneit.ascend.presentation.login.views.EditWithError
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sig_up_fields_spacing"
                    app:error="@{model.newPasswordModel.password.observableError}"
                    app:hint="@{@string/new_password}"
                    app:inputType="@{InputType.TYPE_TEXT_VARIATION_PASSWORD}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/resendCodeView"
                    app:src="@{@drawable/ic_password}"
                    app:text="@={model.newPasswordModel.password.observableField}" />

                <com.doneit.ascend.presentation.login.views.EditWithError
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    app:error="@{model.newPasswordModel.passwordConfirmation.observableError}"
                    app:hint="@{@string/confirm_new_password}"
                    app:inputType="@{InputType.TYPE_TEXT_VARIATION_PASSWORD}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password"
                    app:text="@={model.newPasswordModel.passwordConfirmation.observableField}" />

                <Button
                    android:id="@+id/btnContinue"
                    style="@style/AppTheme.Button"
                    android:layout_marginTop="@dimen/sig_up_fields_spacing"
                    android:enabled="@{model.canSave}"
                    android:onClick="@{v -> model.saveClick()}"
                    android:text="@string/save_new_password"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirmPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>