<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>
        <import type="android.text.InputType" />

        <variable
            name="model"
            type="com.doneit.ascend.presentation.login.sign_up.SignUpContract.ViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:elevation="8dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <include
                    android:id="@+id/userName"
                    layout="@layout/group_icon_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    bind:hint="@{@string/full_name}"
                    bind:icon="@{@drawable/ic_user}"
                    bind:text="@={model.registrationModel.name}"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <include
                    android:id="@+id/email"
                    layout="@layout/group_icon_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    bind:hint="@{@string/email}"
                    bind:icon="@{@drawable/ic_email}"
                    bind:text="@={model.registrationModel.email}"
                    app:layout_constraintTop_toBottomOf="@id/userName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <LinearLayout
                    android:id="@+id/phoneLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@id/email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <!--todo move to custom view-->
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/code"
                        layout="@layout/group_pick_countrycode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvTitle">

                        <ImageView
                            android:id="@+id/icon"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginEnd="16dp"
                            android:src="@drawable/ic_phone"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Spinner
                            android:id="@+id/picker"
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@id/icon"
                            app:layout_constraintTop_toTopOf="parent" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:background="@color/light_gray_e9f0"
                            app:layout_constraintEnd_toEndOf="@id/picker"
                            app:layout_constraintStart_toStartOf="@id/picker"
                            app:layout_constraintTop_toBottomOf="@id/picker" />

                        <TextView
                            android:id="@+id/hint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/red_hat_text_normal"
                            android:text="@string/code"
                            android:textColor="@color/light_gray_b1bf"
                            android:textSize="10sp"
                            app:layout_constraintBottom_toTopOf="@id/picker"
                            app:layout_constraintStart_toStartOf="@id/picker" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <include
                        layout="@layout/group_icon_edit"
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        bind:hint="@{@string/phone_number}"
                        bind:text="@={model.registrationModel.phone}" />
                </LinearLayout>

                <include
                    android:id="@+id/password"
                    layout="@layout/group_icon_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    bind:hint="@{@string/password}"
                    bind:icon="@{@drawable/ic_password}"
                    bind:text="@={model.registrationModel.password}"
                    bind:inputType="@{InputType.TYPE_TEXT_VARIATION_PASSWORD}"
                    app:layout_constraintTop_toBottomOf="@id/phoneLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <include
                    android:id="@+id/confirmPassword"
                    layout="@layout/group_icon_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginStart="30dp"
                    bind:hint="@{@string/password_confirm}"
                    bind:text="@={model.registrationModel.passwordConfirmation}"
                    bind:inputType="@{InputType.TYPE_TEXT_VARIATION_PASSWORD}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/password"/>


                <CheckBox
                    android:id="@+id/cbAgreements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/red_hat_text_normal"
                    android:textSize="18sp"
                    android:textColor="@color/default_font_color"
                    android:paddingStart="16dp"
                    android:text="@string/agreement"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/confirmPassword"/>

                <Button
                    android:id="@+id/btnContinue"
                    style="@style/AppTheme.Button"
                    android:layout_marginTop="32dp"
                    android:onClick="@{v -> model.continueClick()}"
                    android:text="@string/sign_up_continue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cbAgreements"/>

                <TextView
                    android:id="@+id/signIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:fontFamily="@font/red_hat_text_normal"
                    android:textSize="18sp"
                    android:textColor="@color/default_font_color"
                    android:text="@string/already_member"
                    app:layout_constraintTop_toBottomOf="@id/btnContinue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <View
                    android:layout_width="134dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="108dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/light_gray_f4f7"
                    app:layout_constraintVertical_bias="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/signIn" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>
</layout>
